--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include bio.textile %}
 <ul class="posts">
     {% for post in site.posts %}
         <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
