Try to use the teaser image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: bare
     });
 
     $("#500px-activity").rss("http://500px.com/StephenDemjanenko/rss.rss", {
-      entryTemplate: "<li><a href='{url}'>{title}</a><br/><img src='{url}'></li>"
+      entryTemplate: "<li><a href='{url}'>{title}</a><br/>{teaserImage}</li>"
     });
   </script>
 </div>
