--- a/index.html
+++ b/index.html
@@ -1,34 +1,6 @@
 ---
-layout: bare
+# You don't need to edit this file, it's empty on purpose.
+# Edit whiteglass' home layout instead if you want to make some changes.
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
 ---
-<div class="small-4 columns">
-  {% include profile.textile %}
-</div>
-
-<div class="small-4 columns">
-  <ul>
-      {% for post in site.posts %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-  </ul>
-</div>
-
-<div class="small-4 columns">
-  <h5>Photography</h5><div id="500px-activity"></div>
-</div>
-
-<script type="text/javascript">
-  $.get("http://500px.com/StephenDemjanenko/rss.rss", function (data) {
-    var html = [];
-    $(data).find("item").each(function () {
-      var el = $(this);
-
-      var description = el.find("description").text();
-      var imageUrl = description.match(/(<img.*?>)/gi)[0].match(/src="(.*?)"/)[1];
-      var smallImageUrl = imageUrl.replace("4.jpg", "2.jpg");
-      var title = el.find("title").text();
-      html.push("<li><a href='"+imageUrl+"'><img data-caption='" + title + "' src='" + smallImageUrl + "'></a></li>");
-    });
-    $("#500px-activity").html("<ul class='clearing-thumbs' data-clearing>"+html.join("")+"</ul>").foundation();
-  });
-</script>
